# MaterialModels

./: .gitignore  AbaqusSetup.md  LICENSE  README.md
models/CrystalPlasticity/AceGen/: CrystalPlasticity.nb  ElasticLaw.nb  ElasticSetup.nb  GetFunctions.nb  IsotropicHardening.nb  KinematicHardening.nb  MainFile.nb  OverstressFunction.nb  ResidualSetup.nb  SubroutineGeneration.nb  combine_files.py
models/CrystalPlasticity/doc/: CrystalPlasticity.md
models/CrystalPlasticity/python/: OrientationResults.xlsx  SlipSystems.py  csys_rotation.py  optimize_rotations.py  orientation.py
models/CrystalPlasticity/src/: CMakeLists.txt  Hutchinson1976exp_Lindfeldt_AF_bcc.f90  Hutchinson1976exp_Lindfeldt_AF_iso_bcc.f90  abaqus_compile_files.txt  cmake_compile_models.txt  crystal_orientations_mod.f90  rand16384mod.f90  rand512mod.f90  random_mod.f90  taylor_model.f90  umat.f90  umat_module.f90  uniform_mod.f90
models/GenFiniteStrain/: ref.bib
models/GenFiniteStrain/AceGen/: EF1_FE1_SC1.m  ElasticFunction.nb  ElasticOutFunction.nb  GFS_AG_FE1_EV1_SC2.f90  GFS_AG_FE2_EV1_SC1.f90  GFS_AG_FE2_EV1_SC2.f90  GFS_AG_FE3_EV1_SC1.f90  GFS_AG_FE3_EV1_SC2.f90  JacobianFunction.nb  RF1_FE1_EV1_SC1.f90  RF1_FE1_EV1_SC1.m  RF1_FE1_EV1_SC2.m  ResidualFunction.nb  ResidualSetup  ResidualSetup.nb  SpecialFunctions  SpecialFunctions.nb  create_AGfiles.m  dRdFFunction.nb  findprefix.m
models/GenFiniteStrain/AceGen/AGfiles/: EF1_FE1_SC1.f90  EF1_FE1_SC2.f90  EF1_FE2_SC1.f90  EF1_FE2_SC2.f90  EF1_FE3_SC1.f90  EF1_FE3_SC2.f90  EF2_FE1_SC1.f90  EF3_FE1_SC1.f90  EF4_FE1_SC1.f90  EoutF_FE1.f90  EoutF_FE2.f90  EoutF_FE3.f90  RF1_FE1_EV1_SC1.f90  RF1_FE1_EV1_SC2.f90  RF1_FE1_EV2_SC1.f90  RF1_FE2_EV1_SC1.f90  RF1_FE2_EV1_SC2.f90  RF1_FE3_EV1_SC1.f90  RF1_FE3_EV1_SC2.f90  RF2_FE1_EV1_SC1.f90  RF2_FE1_EV2_SC1.f90  RF3_FE1_EV1_SC1.f90  RF3_FE1_EV2_SC1.f90  RF4_FE1_EV1_SC1.f90  RF4_FE1_EV2_SC1.f90  dRdF1_FE1_EV1_SC1.f90  dRdF1_FE1_EV1_SC2.f90  dRdF1_FE1_EV2_SC1.f90  dRdF1_FE2_EV1_SC1.f90  dRdF1_FE2_EV1_SC2.f90  dRdF1_FE3_EV1_SC1.f90  dRdF1_FE3_EV1_SC2.f90  dRdF2_FE1_EV1_SC1.f90  dRdF2_FE1_EV2_SC1.f90  dRdF3_FE1_EV1_SC1.f90  dRdF3_FE1_EV2_SC1.f90  dRdF4_FE1_EV1_SC1.f90  dRdF4_FE1_EV2_SC1.f90  dRdX1_FE1_EV1_SC1.f90  dRdX1_FE1_EV1_SC2.f90  (+11 more)
models/GenFiniteStrain/doc/: gfs_bc.md  gfs_ob.md
models/GenFiniteStrain/src/: CMakeLists.txt  GFS_module.f90  GeneralFiniteStrain.for  abaqus_compile_files.txt  gfs_bc.f90  gfs_ob.f90
models/GenSmallStrain/: ref.bib
models/GenSmallStrain/AceGen/: JacobianFunction.nb  ResidualFunction.nb  ResidualSetup  SpecialFunctions  TensorsToolboxMathematica  make_acegen_mods.py
models/GenSmallStrain/doc/: chaboche.md  chaboche_cowsym.md  chaboche_delobelle.md  chaboche_norton.md  delobelle.md  delobelle_cowsym.md  delobelle_delobelle.md  delobelle_norton.md  ohnowang.md  ohnowang_cowsym.md  ohnowang_delobelle.md  ohnowang_norton.md
models/GenSmallStrain/doc/latex/: MyCustomCommands.sty  Settings.tex  description.tex
models/GenSmallStrain/src/: CMakeLists.txt  GeneralSmallStrain.f90  abaqus_compile_files.txt  chaboche.f90  chaboche_acegen_mod.f90  chaboche_cowsym_acegen_mod.f90  chaboche_delobelle_acegen_mod.f90  chaboche_norton_acegen_mod.f90  chaboche_rdep.f90  cmake_compile_models.txt  delobelle.f90  delobelle_acegen_mod.f90  delobelle_cowsym_acegen_mod.f90  delobelle_delobelle_acegen_mod.f90  delobelle_norton_acegen_mod.f90  delobelle_rdep.f90  gss_module.f90  ohnowang.f90  ohnowang_acegen_mod.f90  ohnowang_cowsym_acegen_mod.f90  ohnowang_delobelle_acegen_mod.f90  ohnowang_norton_acegen_mod.f90  ohnowang_rdep.f90
models/MM2021/: ref.bib
models/MM2021/acegen_rmodel/: DistortionalHardening.nb  ElasticSetup.nb  GetFunctions.nb  KinematicHardening.nb  MainFile.nb  ResidualSetup.nb  SubroutineGeneration.nb  elastic.f90  jacobian.f90  model_size.f90  plastic_output.f90  residual.f90  rmodel.f90  rmodel_ISO2_BC2.f90  tmpinfo.txt
models/MM2021/acegen_symyld/: DistortionalHardening.nb  ElasticSetup.nb  GetFunctions.nb  IsotropicHardening.nb  KinematicHardening.nb  MainFile.nb  ResidualSetup.nb  SubroutineGeneration.nb  combine_files.py  disthard_ISO2_BC2.f90  elastic.f90  jacobian.f90  model_size.f90  plastic_output.f90  residual.f90  tmpinfo.txt
models/MM2021/doc/: readme.md  rmodel.md  symyld.md
models/MM2021/src/: CMakeLists.txt  abaqus_compile_files.txt  disthard_ISO2_BC2.f90  rmodel.f90  umat_module.f90
models/Qin2018/acegen/: ElasticLaw.nb  ElasticSetup.nb  GetFunctions.nb  Hardening.nb  KinematicHardening.nb  MainFile.nb  Qin2018_BC2.f90  ResidualSetup.nb  SubroutineGeneration.nb  elastic.f90  jacobian.f90  model_size.f90  plastic_output.f90  residual.f90  tmpinfo.txt
models/Qin2018/doc/: Qin2018.md
models/Qin2018/src/: CMakeLists.txt  Qin2018_AF2.f90  abaqus_compile_files.txt  umat.f90  umat_module.f90
models/Shi2014/: ref.bib
models/Shi2014/acegen/: DistortionalHardening.nb  ElasticSetup.nb  GetFunctions.nb  IsotropicHardening.nb  KinematicHardening.nb  MainFile.nb  ResidualSetup.nb  Shi2014exp_AF2.f90  Shi2014exp_BC2.f90  SpecialFunctions.nb  SubroutineGeneration.nb  TestExp.nb  elastic.f90  jacobian.f90  model_size.f90  plastic_output.f90  residual.f90  tmpinfo.txt
models/Shi2014/doc/: Shi2014exp_AF.md  Shi2014exp_BC.md
models/Shi2014/src/: CMakeLists.txt  Shi2014exp_BC2.f90  abaqus_compile_files.txt  umat.f90
models/umat_utils/: SolveMatrixEquation.f90  smsutility.f90  tensors_module.f90  umat_utils_instructions.md
models/umat_utils/AceGenUtils/: MathematicaTensorsToolbox.nb
models/umat_utils/Tensors_module/: Abaqus_conversions.f90  Contractions.f90  Conversions.f90  Miscellaneous.f90  Open_products.f90  Operations.f90  Standard_tensors.f90  Stiffness_conversions.f90
scripts/: compile_abaqus.py  compile_general.py
